5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1760_672.log
== TEST (2019-05-22 12:36:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(import("digite um numero: "))

y = ones(x), dtype = int

-- ERROR:
File "XXXX", line 3
    x = int(import("digite um numero: "))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:36:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

y = ones(x), dtype = int

-- ERROR:
File "XXXX", line 5
    y = ones(x), dtype = int
       ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:37:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

y = ones(), dtype = int

-- ERROR:
File "XXXX", line 5
    y = ones(), dtype = int
       ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:39:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))
from numpy import *
y = ones(x),dtype = int

-- ERROR:
File "XXXX", line 5
    y = ones(x),dtype = int
       ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:40:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

ones(x),dtype = int

-- ERROR:
File "XXXX", line 5
    ones(x),dtype = int
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:45:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

ones(x,dtype = int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:45:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

y = ones(x,dtype = int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:45:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

y = ones(x,dtype = int)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:45:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

y = ones(x,dtype = int)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 12:46:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
x = int(input("digite um numero: "))

y = ones(x,dtype = int)

print(y)

-- EXECUTION TIME:
0.445451
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
